# captacao-dados

./: .bumpversion.cfg  README.md  pyproject.toml  web_scrapping.py
